<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <HorizontalScrollView
        android:id="@+id/navigationContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#3F51B5"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/navigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/accueil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accueil"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                />

            <TextView
                android:id="@+id/ajout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ajout"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="10dp"/>

            <TextView
                android:id="@+id/mesDemandes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Demandes"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="10dp"/>
            <TextView
                android:id="@+id/btn_supprimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Supprimer Agent"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textStyle="bold"
                android:paddingLeft="10dp"/>
            <TextView
                android:id="@+id/deconnexion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/Déconnexion"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:padding="10dp"/>
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/ligneTitre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#CCCCCC"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/navigationContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/matricule"
            android:textStyle="bold"
            android:padding="8dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nom"
            android:textStyle="bold"
            android:padding="8dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Prénom"
            android:textStyle="bold"
            android:padding="8dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/poste"
            android:textStyle="bold"
            android:padding="8dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date"
            android:textStyle="bold"
            android:padding="8dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/containerAgents"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/ligneTitre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
